# RustASCIIArt

./: README.md  Tailored EngineeringStandardsforSeniorProject.md
rust-ascii/: Cargo.toml  smem_handle  tarpaulin-report.html
rust-ascii/src/: animations.rs  entity.rs  example_animations.rs  fonts.rs  main.rs  stresstest.rs  tests.rs
rust-ascii/src/animations/: accelerate.rs  char_rand.rs  colr_interpolation.rs  colr_rand.rs  fading_trail.rs  fireball.rs  translate.rs
rust-ascii/src/entity/: character_map.rs  global_ebo.rs  shared_entity.rs  shared_entity_buffer.rs  time_keeper.rs  vbo.rs  virtual_timer.rs
rust-ascii/src/entity/virtual_timer/: priority_queue.rs
rust-ascii/src/example_animations/: ball.rs  buffalo.rs  dvd.rs  elephant.rs  hello_world.rs  recursive.rs
rust-ascii/src/shaders/: fragment_shader.glsl  vertex_shader.glsl
rust-ascii/src/stresstest/: many_fast_shapes.rs  mass_spawn.rs
rust-ascii/tests/: mod.rs  test_integration.rs
